# api-gateway

./: Dockerfile  pyproject.toml
src/app/infrastructure/brokers/: rabbit_broker.py
src/app/main/: config.py  main.py
src/app/presentation/api/: router.py
src/app/presentation/api/v1/: check_health_auth.py  check_health_profile.py  check_health_tasks.py
